--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
-    "three-bvh-csg": "^0.0.17"
+    "three-bvh-csg": "^0.0.17",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
